Install required dependencies offline via mounting

--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -24,6 +24,7 @@
     "!pip install jax\n",
     "!pip install xformers\n",
     "!pip install triton==2.0.0.dev20221202\n",
+    "!pip install accelerate==0.12.0\n",
     "!apt-get update\n",
     "!apt-get install -y p7zip-full\n",
     "!apt-get install -y iputils-ping\n",
@@ -119,6 +120,149 @@
   },
   {
    "cell_type": "markdown",
+   "id": "da47a972-8d88-41ab-9b2a-03d6624cc537",
+   "metadata": {},
+   "source": [
+    "# 创建Content文件夹"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d2db384-8a43-4650-be96-af090b779f06",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "def check_environment(output):\n",
+    "    # 检查输出是否包含字符串\"autodl\"\n",
+    "    # print(output)\n",
+    "    global content_path\n",
+    "    for i in output:\n",
+    "        if \"AutoDL\" in i:\n",
+    "            print(\"当前运行环境为autodl\")\n",
+    "            content_path = \"/root/content\"\n",
+    "            break\n",
+    "        # 检查输出是否包含字符串\"openbayes\"\n",
+    "        elif \"OpenBayes\" in i:\n",
+    "            print(\"当前运行环境为openbayes\")\n",
+    "            content_path = \"/openbayes/home/content\"\n",
+    "            break\n",
+    "    return content_path\n",
+    "\n",
+    "\n",
+    "# 尝试执行第一个命令并存储输出\n",
+    "try:\n",
+    "    output1 = !cd /openbayes/home && /etc/welcome\n",
+    "    content_path = check_environment(output1)\n",
+    "except Exception as e:\n",
+    "    print(\"无法执行命令：\", e)\n",
+    "\n",
+    "# 尝试执行第二个命令并存储输出\n",
+    "try:\n",
+    "    output2 = !source /etc/autodl-motd\n",
+    "    content_path = check_environment(output2)\n",
+    "except Exception as e:\n",
+    "    print(\"无法执行命令：\", e)\n",
+    "\n",
+    "print(\"内容路径：\", content_path)\n",
+    "\n",
+    "# 在根目录下创建Content文件夹\n",
+    "content_folder = content_path\n",
+    "# 在当前运行的ipynb文件所在的目录下创建临时文件夹temp\n",
+    "if not os.path.exists(content_folder):\n",
+    "    os.makedirs(content_folder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ab23d58-33f8-428b-885a-740386e4713c",
+   "metadata": {},
+   "source": [
+    "# 创建符号链接"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bec6d7ce-56a8-48ab-873b-16a64c39f0f7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "def create_symlink(source_path, symlink_path, symlink_name):\n",
+    "    # 创建软链接\n",
+    "    try:\n",
+    "        os.symlink(source_path, f\"{symlink_path}/{symlink_name}\")\n",
+    "    except FileExistsError:\n",
+    "        # 如果软链接已经存在，则删除软链接\n",
+    "        if os.path.exists(f\"{symlink_path}/{symlink_name}\"):\n",
+    "            os.remove(f\"{symlink_path}/{symlink_name}\")\n",
+    "        # 再次尝试创建软链接\n",
+    "        os.symlink(source_path, f\"{symlink_path}/{symlink_name}\")\n",
+    "\n",
+    "    # 验证软链接是否成功创建\n",
+    "    if os.path.islink(f\"{symlink_path}/{symlink_name}\"):\n",
+    "        print(f\"{symlink_path}/{symlink_name} 是一个符号链接。\")\n",
+    "        print(f\"它指向: {os.readlink(f'{symlink_path}/{symlink_name}')}\")\n",
+    "    else:\n",
+    "        print(f\"{symlink_path}/{symlink_name} 不是一个符号链接。\")\n",
+    "        \n",
+    "# # 在output目录下创建一个tf_dir指向dreambooth打印的logs软连接  \n",
+    "# create_symlink(\n",
+    "#     source_path=\"/output/content/models/FuXingHao768/logs/\", \n",
+    "#     symlink_path='/output', \n",
+    "#     symlink_name='tf_dir'\n",
+    "# )\n",
+    "\n",
+    "# 在Content目录下创建一个指向挂载模型的软连接\n",
+    "create_symlink(\n",
+    "    source_path='/input0', # openbayes 特有的目录，是外部数据集挂载到当前镜像的目录，编号从0~4\n",
+    "    symlink_path='/output/content', # fast-dreambooth.ipynb的 model download cell一般下载模型的路径\n",
+    "    symlink_name='stable-diffusion-v2-768' # 模型名称\n",
+    ")\n",
+    "\n",
+    "# 免安装（挂载数据集）DreamBooth所需依赖（能够省掉fast-DreamBooth中的第一个环节）\n",
+    "!rm -rf /usr/local/lib/python3.8/dist-packages\n",
+    "create_symlink(\n",
+    "    source_path='/input1/local/lib/python3.8/dist-packages', \n",
+    "    symlink_path='/usr/local/lib/python3.8',\n",
+    "    symlink_name='dist-packages' \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bc8a57f-e792-4274-85e1-e107da2ba8ee",
+   "metadata": {},
+   "source": [
+    "# 安装Diffusers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48f1f509-510c-4ce0-b568-2ea6aa9c6057",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!pip uninstall -y diffusers\n",
+    "!cd $content_folder &&\\\n",
+    "git clone --branch updt https://github.com/TheLastBen/diffusers &&\\\n",
+    "pip install /openbayes/home/content/diffusers\n",
+    "print('\u001b[1;32mDONE !')    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "25fbefc9-7c37-48bb-97e1-4fef802fc9af",
    "metadata": {},
    "source": [
@@ -178,7 +322,7 @@
     "                if \"!wget\" in line:\n",
     "                    cell[\"source\"][i] = line.replace(\"!wget\", \"!$proxy && wget\")\n",
     "                # 定义 proxyWget 函数（请确保已经定义了 proxyWget 函数）\n",
-    "\n",
+    "                \n",
     "                import textwrap\n",
     "\n",
     "                if \"wget.download\" in line:\n",
@@ -221,6 +365,14 @@
     "                    cell[\"source\"] = import_statements_with_newline + cell[\"source\"]\n",
     "                    # Set the flag to indicate that the import has been added\n",
     "                    import_added = True\n",
+    "                    \n",
+    "            for i, line in enumerate(cell[\"source\"]):    \n",
+    "                # 把pip安装的静默去掉\n",
+    "                if \"pip install -q\" in line:\n",
+    "                    cell[\"source\"][i] = line.replace(\"pip install -q\", \"pip install\")\n",
+    "                # 把wget的静默去掉\n",
+    "                if \"wget -q\" in line:\n",
+    "                    cell[\"source\"][i] = line.replace(\"wget -q\", \"wget\")\n",
     "\n",
     "                # # 原始字符串\n",
     "                # original = \"!cp -r /openbayes/home/content/usr/local/lib/python3.8/dist-packages /usr/local/lib/python3.8/\"\n",
@@ -235,102 +387,10 @@
     "\n",
     "    return newNotebook\n",
     "\n",
-    "\n",
-    "def check_environment(output):\n",
-    "    # 检查输出是否包含字符串\"autodl\"\n",
-    "    # print(output)\n",
-    "    global content_path\n",
-    "    for i in output:\n",
-    "        if \"AutoDL\" in i:\n",
-    "            print(\"当前运行环境为autodl\")\n",
-    "            content_path = \"/root/content\"\n",
-    "            break\n",
-    "        # 检查输出是否包含字符串\"openbayes\"\n",
-    "        elif \"OpenBayes\" in i:\n",
-    "            print(\"当前运行环境为openbayes\")\n",
-    "            content_path = \"/openbayes/home/content\"\n",
-    "            break\n",
-    "    return content_path\n",
-    "\n",
-    "\n",
-    "# 尝试执行第一个命令并存储输出\n",
-    "try:\n",
-    "    output1 = !cd /openbayes/home && /etc/welcome\n",
-    "    content_path = check_environment(output1)\n",
-    "except Exception as e:\n",
-    "    print(\"无法执行命令：\", e)\n",
-    "\n",
-    "# 尝试执行第二个命令并存储输出\n",
-    "try:\n",
-    "    output2 = !source /etc/autodl-motd\n",
-    "    content_path = check_environment(output2)\n",
-    "except Exception as e:\n",
-    "    print(\"无法执行命令：\", e)\n",
-    "\n",
-    "print(\"内容路径：\", content_path)\n",
-    "\n",
-    "# 在根目录下创建Content文件夹\n",
-    "content_folder = content_path\n",
-    "# 在当前运行的ipynb文件所在的目录下创建临时文件夹temp\n",
-    "if not os.path.exists(content_folder):\n",
-    "    os.makedirs(content_folder)\n",
-    "\n",
     "newNotebookPath = replace_root_path(\n",
     "    notebook=fastDreamBoothPath, old_root=\"/content\", new_root=content_folder\n",
     ")\n",
     "print(newNotebookPath)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "77c4244f-3fbc-4f24-b9fa-8eb291dc1535",
-   "metadata": {},
-   "source": [
-    "# 创建符号链接"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bec6d7ce-56a8-48ab-873b-16a64c39f0f7",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "def create_symlink(source_path, symlink_path, symlink_name):\n",
-    "    # 创建软链接\n",
-    "    try:\n",
-    "        os.symlink(source_path, f\"{symlink_path}/{symlink_name}\")\n",
-    "    except FileExistsError:\n",
-    "        # 如果软链接已经存在，则删除软链接\n",
-    "        if os.path.exists(f\"{symlink_path}/{symlink_name}\"):\n",
-    "            os.remove(f\"{symlink_path}/{symlink_name}\")\n",
-    "        # 再次尝试创建软链接\n",
-    "        os.symlink(source_path, f\"{symlink_path}/{symlink_name}\")\n",
-    "\n",
-    "    # 验证软链接是否成功创建\n",
-    "    if os.path.islink(f\"{symlink_path}/{symlink_name}\"):\n",
-    "        print(f\"{symlink_path}/{symlink_name} 是一个符号链接。\")\n",
-    "        print(f\"它指向: {os.readlink(f'{symlink_path}/{symlink_name}')}\")\n",
-    "    else:\n",
-    "        print(f\"{symlink_path}/{symlink_name} 不是一个符号链接。\")\n",
-    "        \n",
-    "# # 在output目录下创建一个tf_dir指向dreambooth打印的logs软连接  \n",
-    "# create_symlink(\n",
-    "#     source_path=\"/output/content/models/FuXingHao768/logs/\", \n",
-    "#     symlink_path='/output', \n",
-    "#     symlink_name='tf_dir'\n",
-    "# )\n",
-    "\n",
-    "# 在Content目录下创建一个指向挂载模型的软连接\n",
-    "create_symlink(\n",
-    "    source_path='/input0', # openbayes 特有的目录，是外部数据集挂载到当前镜像的目录，编号从0~4\n",
-    "    symlink_path='/output/content', # fast-dreambooth.ipynb的 model download cell一般下载模型的路径\n",
-    "    symlink_name='stable-diffusion-v2-768' # 模型名称\n",
-    ")"
    ]
   },
   {
