add symbol link for Sessions

--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -13,6 +13,7 @@
    "execution_count": null,
    "id": "f43a26af-ea59-43a1-b3a4-d7b24c366367",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -182,7 +183,7 @@
    "id": "8ab23d58-33f8-428b-885a-740386e4713c",
    "metadata": {},
    "source": [
-    "# 创建符号链接"
+    "# 创建符号链接（软链接）"
    ]
   },
   {
@@ -197,22 +198,23 @@
     "import os\n",
     "\n",
     "def create_symlink(source_path, symlink_path, symlink_name):\n",
+    "    # 将软链接路径拼接成完整的文件路径\n",
+    "    symlink_file = f\"{symlink_path}/{symlink_name}\"\n",
+    "\n",
+    "    # 如果软链接文件存在，则先删除它\n",
+    "    if os.path.exists(symlink_file):\n",
+    "        os.remove(symlink_file)\n",
+    "\n",
     "    # 创建软链接\n",
-    "    try:\n",
-    "        os.symlink(source_path, f\"{symlink_path}/{symlink_name}\")\n",
-    "    except FileExistsError:\n",
-    "        # 如果软链接已经存在，则删除软链接\n",
-    "        if os.path.exists(f\"{symlink_path}/{symlink_name}\"):\n",
-    "            os.remove(f\"{symlink_path}/{symlink_name}\")\n",
-    "        # 再次尝试创建软链接\n",
-    "        os.symlink(source_path, f\"{symlink_path}/{symlink_name}\")\n",
+    "    os.symlink(source_path, symlink_file)\n",
     "\n",
     "    # 验证软链接是否成功创建\n",
-    "    if os.path.islink(f\"{symlink_path}/{symlink_name}\"):\n",
-    "        print(f\"{symlink_path}/{symlink_name} 是一个符号链接。\")\n",
-    "        print(f\"它指向: {os.readlink(f'{symlink_path}/{symlink_name}')}\")\n",
+    "    if os.path.islink(symlink_file):\n",
+    "        print(f\"{symlink_file} 是一个符号链接。\")\n",
+    "        print(f\"\\033[1m\\033[92m{symlink_file}\\033[0m ➜ \\033[34m{os.readlink(symlink_file)}\\033[0m\")\n",
     "    else:\n",
-    "        print(f\"{symlink_path}/{symlink_name} 不是一个符号链接。\")\n",
+    "        print(f\"{symlink_file} 不是一个符号链接。\")\n",
+    "\n",
     "        \n",
     "# # 在output目录下创建一个tf_dir指向dreambooth打印的logs软连接  \n",
     "# create_symlink(\n",
@@ -234,7 +236,14 @@
     "    source_path='/input1/local/lib/python3.8/dist-packages', \n",
     "    symlink_path='/usr/local/lib/python3.8',\n",
     "    symlink_name='dist-packages' \n",
-    ")"
+    ")\n",
+    "\n",
+    "# 因为默认的Sessions路径太深（原作者是为了Colab而设计的），所以要在根目录创建一个链接到Sessions的快捷方式\n",
+    "create_symlink(\n",
+    "    source_path='/output/content/gdrive/MyDrive/Fast-Dreambooth/Sessions', \n",
+    "    symlink_path='/openbayes',\n",
+    "    symlink_name='Sessions' \n",
+    ")\n"
    ]
   },
   {
