fix bug for autoDL

--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -24,7 +24,7 @@
     "!pip install bitsandbytes\n",
     "!pip install jax\n",
     "!pip install xformers\n",
-    "!pip install triton==2.0.0.dev20221202\n",
+    "!pip install triton==2.0.0.dev20221120\n",
     "!pip install accelerate==0.12.0\n",
     "!apt-get update\n",
     "!apt-get install -y p7zip-full\n",
@@ -62,7 +62,7 @@
     "tags": []
    },
    "source": [
-    "# 创建Temp文件夹"
+    "# 创建Temp文件夹并下载fast-DreamBooth.ipynb到Temp目录下"
    ]
   },
   {
@@ -109,7 +109,18 @@
     "url = \"https://raw.githubusercontent.com/TheLastBen/fast-stable-diffusion/main/fast-DreamBooth.ipynb\"\n",
     "out = os.path.join(temp_folder, file_name)\n",
     "\n",
-    "!$proxy && wget -O $out $url\n",
+    "import subprocess\n",
+    "\n",
+    "# Execute the command with a timeout of 5 seconds\n",
+    "exit_code = subprocess.call([\"timeout\", \"--preserve-status\", \"5\", \"wget\", \"-O\", out, url])\n",
+    "\n",
+    "# Check the exit status\n",
+    "if exit_code == 124:\n",
+    "    print(\"Command timed out, trying again\")\n",
+    "    # Execute the command again\n",
+    "    !$proxy && wget -O $out $url\n",
+    "else:\n",
+    "    print(\"Command completed successfully\")\n",
     "\n",
     "# fastDreamBoothPath = proxyWget(\n",
     "#     url=url,\n",
@@ -139,41 +150,73 @@
     "import os\n",
     "\n",
     "def check_environment(output):\n",
-    "    # 检查输出是否包含字符串\"autodl\"\n",
-    "    # print(output)\n",
-    "    global content_path\n",
-    "    for i in output:\n",
-    "        if \"AutoDL\" in i:\n",
-    "            print(\"当前运行环境为autodl\")\n",
-    "            content_path = \"/root/content\"\n",
-    "            break\n",
-    "        # 检查输出是否包含字符串\"openbayes\"\n",
-    "        elif \"OpenBayes\" in i:\n",
-    "            print(\"当前运行环境为openbayes\")\n",
-    "            content_path = \"/openbayes/home/content\"\n",
-    "            break\n",
-    "    return content_path\n",
+    "    environments = {\n",
+    "        \"AutoDL\": {\n",
+    "            \"content_path\": \"/root/content\",\n",
+    "            \"env_name\": \"AutoDL\"\n",
+    "        },\n",
+    "        \"OpenBayes\": {\n",
+    "            \"content_path\": \"/openbayes/home/content\",\n",
+    "            \"env_name\": \"OpenBayes\"\n",
+    "        }\n",
+    "    }\n",
+    "    # 检查输出是否包含字符串\"autodl\"或\"openbayes\"\n",
+    "    # for i in output:\n",
+    "    if \"AutoDL\" in output:\n",
+    "        return environments[\"AutoDL\"]\n",
+    "    elif \"OpenBayes\" in output:\n",
+    "        return environments[\"OpenBayes\"]\n",
+    "    # 如果输出中没有包含上述字符串，则返回空字典\n",
+    "    return {}\n",
     "\n",
     "\n",
-    "# 尝试执行第一个命令并存储输出\n",
-    "try:\n",
-    "    output1 = !cd /openbayes/home && /etc/welcome\n",
-    "    content_path = check_environment(output1)\n",
-    "except Exception as e:\n",
-    "    print(\"无法执行命令：\", e)\n",
+    "def detect_environment():\n",
+    "    # 初始化 content_path 和 env_name 变量\n",
+    "    content_path = None\n",
+    "    env_name = None\n",
     "\n",
-    "# 尝试执行第二个命令并存储输出\n",
-    "try:\n",
-    "    output2 = !source /etc/autodl-motd\n",
-    "    content_path = check_environment(output2)\n",
-    "except Exception as e:\n",
-    "    print(\"无法执行命令：\", e)\n",
+    "    # 将命令行存储在列表中\n",
+    "    commands = [\n",
+    "        \"cd /openbayes/home && chmod +x /etc/welcome && /etc/welcome\",\n",
+    "        \"chmod +x /etc/autodl-motd && /etc/autodl-motd\"\n",
+    "    ]\n",
     "\n",
-    "print(\"内容路径：\", content_path)\n",
+    "    # 遍历命令行列表，执行命令并存储输出\n",
+    "    for command in commands:\n",
+    "        try:\n",
+    "            import subprocess\n",
+    "            # 使用 subprocess 模块执行命令\n",
+    "            r = subprocess.run(command, shell=True, stdout=subprocess.PIPE)\n",
+    "            output = r.stdout\n",
+    "            # 将输出转换为字符串\n",
+    "            output = output.decode()\n",
+    "            # print(output)\n",
+    "            result = check_environment(output)\n",
+    "            content_path = result[\"content_path\"]\n",
+    "            env_name = result[\"env_name\"]\n",
+    "            # 如果检测到环境，则退出循环\n",
+    "            if content_path and env_name:\n",
+    "                break\n",
+    "        except Exception as e:\n",
+    "            # print(\"无法执行命令：\", e)\n",
+    "            continue\n",
     "\n",
+    "    # 打印结果\n",
+    "    if content_path and env_name:\n",
+    "        print(\"当前运行环境：\", env_name)\n",
+    "        print(\"内容路径：\", content_path)\n",
+    "    else:\n",
+    "        print(\"未检测到当前运行环境\")\n",
+    "        \n",
+    "    return {\n",
+    "        \"content_path\":content_path,\n",
+    "        \"env_name\":env_name\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "content_path=detect_environment()[\"content_path\"]\n",
     "# 在根目录下创建Content文件夹\n",
     "content_folder = content_path\n",
-    "# 在当前运行的ipynb文件所在的目录下创建临时文件夹temp\n",
     "if not os.path.exists(content_folder):\n",
     "    os.makedirs(content_folder)"
    ]
@@ -223,27 +266,34 @@
     "#     symlink_name='tf_dir'\n",
     "# )\n",
     "\n",
-    "# 在Content目录下创建一个指向挂载模型的软连接\n",
-    "create_symlink(\n",
-    "    source_path='/input0', # openbayes 特有的目录，是外部数据集挂载到当前镜像的目录，编号从0~4\n",
-    "    symlink_path='/output/content', # fast-dreambooth.ipynb的 model download cell一般下载模型的路径\n",
-    "    symlink_name='stable-diffusion-v2-768' # 模型名称\n",
-    ")\n",
+    "env_name=detect_environment()[\"env_name\"]\n",
     "\n",
-    "# 免安装（挂载数据集）DreamBooth所需依赖（能够省掉fast-DreamBooth中的第一个环节）\n",
-    "!rm -rf /usr/local/lib/python3.8/dist-packages\n",
-    "create_symlink(\n",
-    "    source_path='/input1/local/lib/python3.8/dist-packages', \n",
-    "    symlink_path='/usr/local/lib/python3.8',\n",
-    "    symlink_name='dist-packages' \n",
-    ")\n",
+    "if env_name==\"OpenBayes\":\n",
     "\n",
-    "# 因为默认的Sessions路径太深（原作者是为了Colab而设计的），所以要在根目录创建一个链接到Sessions的快捷方式\n",
-    "create_symlink(\n",
-    "    source_path='/output/content/gdrive/MyDrive/Fast-Dreambooth/Sessions', \n",
-    "    symlink_path='/openbayes',\n",
-    "    symlink_name='Sessions' \n",
-    ")\n"
+    "    # 在Content目录下创建一个指向挂载模型的软连接\n",
+    "    create_symlink(\n",
+    "        source_path='/input0', # openbayes 特有的目录，是外部数据集挂载到当前镜像的目录，编号从0~4\n",
+    "        symlink_path='/output/content', # fast-dreambooth.ipynb的 model download cell一般下载模型的路径\n",
+    "        symlink_name='stable-diffusion-v2-768' # 模型名称\n",
+    "    )\n",
+    "\n",
+    "    # 免安装（挂载数据集）DreamBooth所需依赖（能够省掉fast-DreamBooth中的第一个环节）\n",
+    "    !rm -rf /usr/local/lib/python3.8/dist-packages\n",
+    "    create_symlink(\n",
+    "        source_path='/input1/local/lib/python3.8/dist-packages', \n",
+    "        symlink_path='/usr/local/lib/python3.8',\n",
+    "        symlink_name='dist-packages' \n",
+    "    )\n",
+    "\n",
+    "    # 因为默认的Sessions路径太深（原作者是为了Colab而设计的），所以要在根目录创建一个链接到Sessions的快捷方式\n",
+    "    create_symlink(\n",
+    "        source_path='/output/content/gdrive/MyDrive/Fast-Dreambooth/Sessions', \n",
+    "        symlink_path='/openbayes',\n",
+    "        symlink_name='Sessions' \n",
+    "    )\n",
+    "    \n",
+    "elif env_name==\"AutoDL\":\n",
+    "    print(\"\")\n"
    ]
   },
   {
@@ -305,18 +355,32 @@
     "    with open(notebook, \"r\") as f:\n",
     "        nb = json.load(f)\n",
     "\n",
-    "    # 删除指定的单元格\n",
-    "    delList = [\n",
-    "        '@markdown # Dependencies',\n",
-    "        '@markdown #Concept Images',\n",
-    "        'Only if you have trouble connecting to the local server.',\n",
-    "        \"@markdown - [Create a write access token](https://huggingface.co/settings/tokens) \",\n",
-    "        \"@markdown - Upload showcase images of your trained model\",\n",
-    "        \"Display the list of sessions from your gdrive and choose which ones to remove.\",\n",
-    "        \"Test The Trained Model\",\n",
-    "        \"Upload The Trained Model to Hugging Face\",\n",
-    "        \"@markdown  - Important! Choose the correct version and resolution of the model\\n\"\n",
-    "    ]\n",
+    "    env_name=detect_environment()[\"env_name\"]\n",
+    "    \n",
+    "    if env_name==\"OpenBayes\":\n",
+    "        # 删除指定的单元格\n",
+    "        delList = [\n",
+    "            '@markdown # Dependencies',\n",
+    "            '@markdown #Concept Images',\n",
+    "            'Only if you have trouble connecting to the local server.',\n",
+    "            \"@markdown - [Create a write access token](https://huggingface.co/settings/tokens) \",\n",
+    "            \"@markdown - Upload showcase images of your trained model\",\n",
+    "            \"Display the list of sessions from your gdrive and choose which ones to remove.\",\n",
+    "            \"Test The Trained Model\",\n",
+    "            \"Upload The Trained Model to Hugging Face\",\n",
+    "            \"@markdown  - Important! Choose the correct version and resolution of the model\\n\"\n",
+    "        ]\n",
+    "    elif env_name==\"AutoDL\":\n",
+    "        delList = [\n",
+    "            '@markdown #Concept Images',\n",
+    "            'Only if you have trouble connecting to the local server.',\n",
+    "            \"@markdown - [Create a write access token](https://huggingface.co/settings/tokens) \",\n",
+    "            \"@markdown - Upload showcase images of your trained model\",\n",
+    "            \"Display the list of sessions from your gdrive and choose which ones to remove.\",\n",
+    "            \"Test The Trained Model\",\n",
+    "            \"Upload The Trained Model to Hugging Face\",\n",
+    "            \"@markdown  - Important! Choose the correct version and resolution of the model\\n\"\n",
+    "        ]        \n",
     "    \n",
     "    # 由于 Python 中的 for 循环是基于迭代器的，所以如果在循环过程中对列表进行修改（如在这里的删除操作），可能会导致结果不如预期。\n",
     "    for cell in nb['cells'][:]: # 在 Python 中，[:] 可以用来复制一个列表\n",
@@ -422,6 +486,10 @@
     "newNotebookPath = replace_root_path(\n",
     "    notebook=fastDreamBoothPath, old_root=\"/content\", new_root=content_folder\n",
     ")\n",
+    "\n",
+    "# #对newNotebookPath进行格式化处理\n",
+    "# !black $newNotebookPath\n",
+    "\n",
     "print(newNotebookPath)"
    ]
   },
@@ -657,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
