add envInstaller for AutoDL

--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -152,7 +152,7 @@
     "def check_environment(output):\n",
     "    environments = {\n",
     "        \"AutoDL\": {\n",
-    "            \"content_path\": \"/root/content\",\n",
+    "            \"content_path\": \"/root/autodl-tmp/content\",\n",
     "            \"env_name\": \"AutoDL\"\n",
     "        },\n",
     "        \"OpenBayes\": {\n",
@@ -231,12 +231,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "bec6d7ce-56a8-48ab-873b-16a64c39f0f7",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "当前运行环境： AutoDL\n",
+      "内容路径： /root/content\n",
+      "/root/content 是一个符号链接。\n",
+      "\u001b[1m\u001b[92m/root/content\u001b[0m ➜ \u001b[34m/root/autodl-tmp/content\u001b[0m\n",
+      "/root/Sessions 是一个符号链接。\n",
+      "\u001b[1m\u001b[92m/root/Sessions\u001b[0m ➜ \u001b[34m/root/autodl-tmp/content/gdrive/MyDrive/Fast-Dreambooth/Sessions\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/bin/sh: 1: cd: can't cd to /openbayes/home\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -293,7 +313,20 @@
     "    )\n",
     "    \n",
     "elif env_name==\"AutoDL\":\n",
-    "    print(\"\")\n"
+    "    # 在/root目录下创建一个指向/autodl-tmp/content的软连接\n",
+    "    create_symlink(\n",
+    "        source_path='/root/autodl-tmp/content', # openbayes 特有的目录，是外部数据集挂载到当前镜像的目录，编号从0~4\n",
+    "        symlink_path='/root', # fast-dreambooth.ipynb的 model download cell一般下载模型的路径\n",
+    "        symlink_name='content' # 模型名称\n",
+    "    )\n",
+    "    # 因为默认的Sessions路径太深（原作者是为了Colab而设计的），所以要在根目录创建一个链接到Sessions的快捷方式\n",
+    "    create_symlink(\n",
+    "        source_path='/root/autodl-tmp/content/gdrive/MyDrive/Fast-Dreambooth/Sessions', \n",
+    "        symlink_path='/root',\n",
+    "        symlink_name='Sessions' \n",
+    "    )\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
@@ -707,6 +740,14 @@
     "\n",
     "# refsColor()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3382f6f-2633-4e87-8178-c68f544940aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
