diffusers installer auto detect

--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -30,7 +30,6 @@
     "!apt-get install -y p7zip-full\n",
     "!apt-get install -y iputils-ping\n",
     "!apt-get install -y git-lfs\n",
-    "\n",
     "# !pip install -r requirements.txt"
    ]
   },
@@ -346,11 +345,21 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "!pip uninstall -y diffusers\n",
-    "!cd $content_folder &&\\\n",
-    "git clone --branch updt https://github.com/TheLastBen/diffusers &&\\\n",
-    "pip install /openbayes/home/content/diffusers\n",
-    "print('\u001b[1;32mDONE !')    "
+    "\n",
+    "# 检测 diffusers 目录是否存在\n",
+    "if not os.path.exists(os.path.join(content_folder, 'diffusers')):\n",
+    "    # 如果 diffusers 目录不存在，则进行 clone\n",
+    "    !cd $content_folder &&\\\n",
+    "    git clone --branch updt https://github.com/TheLastBen/diffusers\n",
+    "else:\n",
+    "    # 如果 diffusers 目录已经存在，则不进行 clone，直接输出提示信息\n",
+    "    print('diffusers 目录已经存在，不进行 clone 操作。')\n",
+    "  \n",
+    "!pip install --user $content_folder/diffusers\n",
+    "print('\u001b[1;32mDONE !')"
    ]
   },
   {
@@ -766,7 +775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
